--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Biodata Diri</title>
     <style>
        body {
-    background-image: url('images/beach1.gif');
+    background-image: url('beach1.gif');
     background-size: 100%,100%; 
     background-position: center;
     background-repeat: no-repeat; 
