--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h1>Biodata Diri</h1>
         </header>
         <div class="profile">
-          <img src="images/foto1.png" alt="Foto Profil">
+          <img src="foto1.png" alt="Foto Profil">
             <div class="profile-info">
                 <h2>Nama: Muhammad Tegar Nur Rachma</h2>
                 <p>Umur: 19 Tahun</p>
@@ -147,10 +147,10 @@
         <div class="social-container">
           <h3>Ikuti Saya di Media Sosial</h3>
         <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100091575337181&locale=id_ID" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@tegar_nr2" target="_blank"><img src="images/tiktok.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/tegar_nr02/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/muhammad-tegar-nur-rachma-b1819028b/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/profile.php?id=100091575337181&locale=id_ID" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+            <a href="https://www.tiktok.com/@tegar_nr2" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+            <a href="https://www.instagram.com/tegar_nr02/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/muhammad-tegar-nur-rachma-b1819028b/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
 </div>
 </div>
 </div> 
